--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ django-cleanup==9.0.0
 django-computedfields==0.2.6
 django-cors-headers==4.6.0
 django-fast-update==0.2.3
+django-rest-passwordreset==1.5.0
 djangorestframework==3.15.2
 filelock==3.16.0
 identify==2.6.0
